--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.14.21
 
 # Mod Properties
 mod_version=0.0.1
-maven_group=net.bin4rym4ge.testyttestmod
+maven_group=net.bin4rym4ge.testytestmod
 archives_base_name=testytestmod
 
 # Dependencies
